--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/vikpe/domain-name-util",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "test-watch": "jest --coverage --watch"
   },
   "main": "index.js",
