--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,14 @@ cache:
   timeout: 3600
   directories:
   - node_modules
+env:
+  global:
+    - CC_TEST_REPORTER_ID=d43f291877434adf37460b712f5c1f300e4f39d98c5360ea397483bc305e44f0
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+script:
+  - npm run test --coverage
+after_script:
+  - ./cc-test-reporter after-build --coverage-input-type lcov --exit-code $TRAVIS_TEST_RESULT
