--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/cli": "^7.6.0",
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "jest": "^24.9.0",
     "prettier": "^1.18.2"
   }
