--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,8 +9,8 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest]
-        node-version: [ 8.x, 10.x, 12.x, 13.x ]
+        os: [ ubuntu-latest ]
+        node-version: [ 10.x, 12.x, 14.x 15.x ]
 
     steps:
       - uses: actions/checkout@v2
