--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         os: [ ubuntu-latest ]
-        node-version: [ 10.x, 12.x, 14.x 15.x ]
+        node-version: [ 10.x, 12.x, 14.x, 15.x ]
 
     steps:
       - uses: actions/checkout@v2
